Fixed swagger issues
